Fix overflow on mobile devices and tweak layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,15 @@
 
 /* Padding and margins */
 
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
 .jumbotronHeader-spacing {
     padding: 0px 0px 10px;
 }
@@ -33,7 +42,6 @@
 .carousel {
     margin-bottom: 30px;
 }
-
 
 /* Text */
 
@@ -156,7 +164,7 @@
 /* About */
 
 .about-background {
-    min-height: 80vh;
+    min-height: 50vh;
     background: url(../images/IMG_1258.JPG) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -168,22 +176,11 @@
     position: relative;
 }
 
-
-/* .about-text {
-    overflow-x: hidden; 
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-} */
-
-/* .about-text::-webkit-scrollbar {
-    display: none;
-} */
-
  .about-bg-overlay { 
     position: relative;
     top: 0;
     left: 0;
-    min-height: 100%;
+    min-height: 50vh;
     min-width: 100vw;
     background-size: cover;
     background-color: rgba(41, 44, 121, 0.8);
@@ -199,7 +196,7 @@
 /* Contact */
 
 .contact-background {
-    min-height: 80vh;
+    min-height: 50vh;
     background: url(../images/IMG_1254.JPG) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -215,7 +212,7 @@
     position: relative;
     top: 0;
     left: 0;
-    min-height: 80vh;
+    min-height: 50vh;
     min-width: 100vw;
     background-size: cover;
     background-color: rgba(41, 44, 121, 0.8);
@@ -248,6 +245,31 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
+}
+
+.socialMedia-links i {
+    padding-bottom: 15px;
+}
+
+.socialMedia-links a i {
+  width: 32px;
+  height: 32px;
+  padding: 12px 0;
+  border-radius: 25%;
+  font-size: 14px;
+  line-height: 7px;
+  text-align: center;
+  color: #fafaff;
+  background: #292c79;
+  transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+}
+
+.socialMedia-links i:hover {
+    background: #ffb300;
 }
 
 /* Form fonts */
@@ -286,7 +308,9 @@ form {
    .jumbotron p {
        display: none;
     }
-
+    .callout-background {
+    height: 90vh;
+    }
 }
 
 @media only screen and (max-width: 414px) {
